force-app/main/default/objects/User/fields/GMT_Offset__c.field-meta.xml
<CustomField>
    <fullName>GMT_Offset__c</fullName>
    <label>GMT Offset</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>