force-app/main/default/objects/User/fields/Salesforce_18_digit_number__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_18_digit_number__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salesforce 18 digit number</label>
    <type>Text</type>
</CustomField>