force-app/main/default/objects/User/fields/Summertime_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Summertime_Start_Date__c</fullName>
    <label>Summertime Start Date</label>
    <type>Date</type>
</CustomField>