force-app/main/default/objects/User/fields/Summertime_Start_Offset__c.field-meta.xml
<CustomField>
    <fullName>Summertime_Start_Offset__c</fullName>
    <label>Summertime Start Offset</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>