force-app/main/default/objects/User/fields/Timezone_Name__c.field-meta.xml
<CustomField>
    <fullName>Timezone_Name__c</fullName>
    <label>Timezone Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>