force-app/main/default/objects/User/fields/TwilioSF__Twilio_Personal_Number__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Twilio_Personal_Number__c</fullName>
    <description>Twilio Personal Number assigned to this User</description>
    <inlineHelpText>Twilio Personal Number assigned to this User</inlineHelpText>
    <label>Twilio Personal Number</label>
    <type>Phone</type>
</CustomField>