force-app/main/default/objects/User/fields/Wintertime_Start_Offset__c.field-meta.xml
<CustomField>
    <fullName>Wintertime_Start_Offset__c</fullName>
    <label>Wintertime Start Offset</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>